calico-policies/public-network-isolation/jp-tok/allow-public-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone of
# your cluster to the cluster master through the public service endpoint. Note
# that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for ap-north: che01, hkg02, seo01, sng01, tok02, tok04, tok05
      - 119.81.194.90/32
      - 119.81.222.210/32
      - 128.168.106.194/32
      - 128.168.71.117/32
      - 128.168.75.194/32
      - 128.168.85.154/32
      - 161.202.126.210/32
      - 161.202.154.10/32
      - 161.202.186.226/32
      - 161.202.56.10/32
      - 161.202.57.34/32
      - 165.192.69.69/32
      - 165.192.80.146/32
      - 165.192.83.202/32
      - 165.192.95.90/32
      - 169.38.68.178/32
      - 169.38.70.10/32
      - 169.38.79.170/32
      - 169.56.1.162/32
      - 169.56.132.234/32
      - 169.56.48.114/32
      - 169.56.69.242/32
      - 169.56.96.42/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for ap-north: che01, hkg02, seo01, sng01, tok02, tok04, tok05
      - 119.81.194.90/32
      - 119.81.222.210/32
      - 128.168.106.194/32
      - 128.168.71.117/32
      - 128.168.75.194/32
      - 128.168.85.154/32
      - 161.202.126.210/32
      - 161.202.154.10/32
      - 161.202.186.226/32
      - 161.202.56.10/32
      - 161.202.57.34/32
      - 165.192.69.69/32
      - 165.192.80.146/32
      - 165.192.83.202/32
      - 165.192.95.90/32
      - 169.38.68.178/32
      - 169.38.70.10/32
      - 169.38.79.170/32
      - 169.56.1.162/32
      - 169.56.132.234/32
      - 169.56.48.114/32
      - 169.56.69.242/32
      - 169.56.96.42/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1500
  selector: ibm.role == 'worker_public'
  types:
  - Egress
