calico-policies/public-network-isolation/jp-tok/allow-public-services.yaml
# This policy allows outgoing network traffic from worker nodes to other IBM Cloud services.
# The example nets and ports in this policy are for IBM Cloud Container Registry, IBM Cloud
# IBM Cloud Monitoring, IBM Cloud Logs, and the managed Istio add-on.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-services
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global registry
      - 169.60.98.80/29
      - 169.62.37.240/29
      - 169.63.104.232/29
      - 169.47.153.160/28 
      - 103.41.69.127/32
      - 103.41.69.114/32
      - 103.41.69.115/32
      # IBM Cloud Container Registry: AP North, AP South nets for your own registry
      - 128.168.71.64/29
      - 161.202.146.80/29
      - 165.192.71.216/29
      - 130.198.88.128/29
      - 135.90.66.48/29
      - 168.1.1.240/29
      - 103.41.70.143/32
      - 103.41.70.151/32
      - 103.41.70.155/32
      - 103.41.70.135/32
      - 103.41.70.139/32
      - 103.41.70.141/32
      - 103.41.70.142/32
      - 103.41.70.157/32
      - 103.41.70.158/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring: jp-tok
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints
      - 165.192.84.14/32
      - 128.168.75.14/32
      - 169.56.51.238/32
      # backup pools IBM Cloud Monitoring: AP North nets
      - 128.168.91.236/32
      - 128.168.91.238/32
      - 161.202.93.250/32
      - 161.202.93.252/32
      - 165.192.69.125/32
      - 165.192.71.227/32
      - 169.38.128.166/32
      - 169.38.82.173/32
      - 169.56.80.178/32
      - 169.56.80.182/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: AP North nets
      - 128.168.70.51/32
      - 128.168.70.53/32
      - 161.202.67.2/32
      - 161.202.93.253/32
      - 165.192.69.122/32
      - 165.192.71.226/32
      - 169.38.128.164/32
      - 169.38.82.170/32
      - 169.56.70.102/32
      - 169.56.70.98/32
      # New IP addresses added on 1/19/2023
      - 161.202.231.186/32
      - 128.168.96.179/32
      - 165.192.111.36/32
      # End new IP address list
      # CIDR Blocks added on 7/26/2023
      - 128.168.83.96/27
      - 128.168.95.64/28
      - 161.202.78.192/27
      - 161.202.78.80/28
      - 165.192.107.32/27
      - 165.192.97.208/28
      # End CIDR Blocks
      ports:
      - 443
      - 80
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      # Managed Istio add-on: Egress gateway
      - 80
      - 15443
    protocol: TCP
    source: {}
  ingress:
  - action: Allow
    destination:
      ports:
      # Managed Istio add-on: Ingress gateway and istiod control plane
      - 443
      - 853
      - 15010
      - 15012
      - 15014
      # Managed Istio add-on: Knative cluster local gateway
      - 80
      - 15021
      - 15443
    protocol: TCP
    source: {}
  order: 1800
  selector: ibm.role == 'worker_public'
  types:
  - Egress
  - Ingress
